# Chemical

Backend/: pyproject.toml
Backend/chemical_equipment/: manage.py
Backend/chemical_equipment/chemical_equipment/: settings.py  urls.py
Backend/chemical_equipment/equipment/: models.py  views.py
Desktop/: main.py  pyproject.toml
Frontend/: package.json  pnpm-lock.yaml
Frontend/src/: App.jsx
