[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "reportlab>=4.4.5",
    "whitenoise>=6.11.0",
]
